[package]
name = "interledger-settlement-engines"
description = "Interledger Settlement Engines"
version = "0.1.1-beta.2"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
hex = { version = "0.3.2", default-features = false }
web3 = { version = "0.8.0", default-features = false }
log = { version = "0.4.6", default-features = false }
tokio = { version = "0.1.21", default-features = false }
hyper = { version = "0.12.31", default-features = false }
futures = { version = "0.1.25", default-features = false }
interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false }
interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false }
ethabi = { version = "8.0.1", default-features = false }
serde = { version = "1.0.99", default-features = false }
serde_json = { version = "1.0.40", default-features = false }
bytes = { version = "0.4.12", default-features = false }
ring = { version = "0.14.6", default-features = false }
url = { version = "2.1.0", default-features = false }
reqwest = { version = "0.9.20", default-features = false }
env_logger = { version = "0.6.2", default-features = false }
uuid = { version = "0.7.4", default-features = false, features = ["serde", "v4"]  }
tokio-retry = { version = "0.2.0", default-features = false }
redis = { version = "0.12.0", default-features = false }
http = { version = "0.1.17", default-features = false }
clap = { version = "2.32.0", default-features = false }
clarity = { version = "0.1.22", default-features = false }
sha3 = { version = "0.8.2", default-features = false }
num-bigint = { version = "0.2.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
secrecy = { version = "0.5.0", default-features = false, features = ["serde", "bytes"] }
parking_lot = { version = "0.9.0", default-features = false }
config = { version = "0.9.3", default-features = false, features = [ "json", "yaml" ] }
libc = { version = "0.2.62", default-features = false }
tiny-keccak= { version = "1.4.2", default-features = false, optional = true }
secp256k1 = { version = "0.15.5", default-features = false, optional = true }
rlp = { version = "0.4.2", default-features = false, optional = true }
ethereum-types = { version = "0.6.0", default-features = false, optional = true }
warp = { version = "0.1.20", default-features = false }


[dev-dependencies]
mockito = { version = "0.20.0", default-features = false }
net2 = { version = "0.2.33", default-features = false }
os_type = { version = "2.2.0", default-features = false }
rand = { version = "0.7.0", default-features = false }
interledger = { version = "0.4.1-alpha.1", default-features = false }
ilp-node = { version = "0.4.1-beta.3", default-features = false }

[features]
ethereum = ["tiny-keccak", "secp256k1", "rlp", "ethereum-types"]
