[package]
name = "interledger-settlement-api"
version = "0.1.0"
authors = ["Georgios Konstantopoulos me@gakonst.com>"]
description = "Settlement API for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-settlement"

[dependencies]
interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
interledger-packet = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
hyper = { version = "0.12.35", default-features = false }
settlement-core = { path = "../settlement-core", version = "0.1.0" }
log = { version = "0.4.8", default-features = false }
reqwest = { version = "0.9.21", default-features = false }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
url = { version = "2.1.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
uuid = { version = "0.7.4", default-features = false }
tokio-retry = { version = "0.2.0", default-features = false }
tokio = { version = "0.1.22", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
num-traits = { version = "0.2.8", default-features = false }
warp = { version = "0.1.20", default-features = false }

[dev-dependencies]
mockito = "0.21.0"
parking_lot = "0.9.0"
env_logger = "0.7.1"