[package]
name = "ethereum-engine"
description = "Ethereum L1 Settlement Engine for the Interledger Settlement Architecture"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
hex = "0.3.2"
web3 = "0.8.0"
log = "0.4.6"
tokio = "0.1.21"
hyper = "0.12.31"
futures = "0.1.25"
interledger-service = "0.3.0"
# need to pull from the same branch so that the ApiError type is from the same
# exact version as the one in the SettlementEngine crate
interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "rfc-update" }
# no need to pull the whole crate, just get the settlement_core module
interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "rfc-update", default-features = false  }
ethabi = "8.0.1"
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
json = "0.11.14"
bytes = "0.4.12"
ring = "0.16.9"
tokio-executor = "0.1.8"
url = "2.1.0"
reqwest = "0.9.20"
env_logger = "0.6.2"
uuid = { version = "0.7.4", features = ["serde", "v4"]  }
tokio-retry = "0.2.0"
redis_crate = { package = "redis", version = "0.13.0", optional = true }
http = "0.1.17"
clap = "2.32.0"
clarity = "0.1.22"
sha3 = "0.8.2"
num-bigint = "0.2.2"
num-traits = "0.2.8"
lazy_static = "1.4.0"
secrecy = { version = "0.5.0", features = ["serde", "bytes"] }
zeroize = { version = "1.0.0", features = ["bytes"] }
parking_lot = "0.9.0"
config = { version = "0.9.3", features = [ "json", "yaml" ] }
libc = "0.2.62"
tiny-keccak="1.4.2"
secp256k1 ="0.15.5"
rlp ="0.4.2"
ethereum-types ="0.6.0"
warp = "0.1.20"


[dev-dependencies]
lazy_static = "1.3"
mockito = "0.20.0"
parking_lot = "0.9.0"
net2 = "0.2.33"
os_type = "2.2.0"
rand = "0.7.0"
interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "rfc-update" }
ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "rfc-update" }

[features]
redis = ["redis_crate", "interledger-settlement/redis", "interledger-settlement/backends_common"]