[package]
name = "settlement-core"
version = "0.1.0"
authors = ["Georgios Konstantopoulos me@gakonst.com>"]
description = "Settlement-related components for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-settlement"

[dependencies]
# todo replace with latest published versions
interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
interledger-packet = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
log = "0.4.8"
bytes = "0.4.12"
serde = "1.0.101"
lazy_static = "1.4.0"
url = "2.1.0"
futures = "0.1.29"
http = "0.1.19"
num-traits = "0.2.8"
num-bigint = "0.2.3"
ring = { version = "0.16.9", default-features = false }
warp = "0.1.20"
redis_crate = { package = "redis", version = "0.13.0", optional = true }
hyper = "0.12.35"

[dev-dependencies]
serde_json = "1.0.41"
parking_lot = "0.9.0"
tokio = "0.1.22"
env_logger = "0.7.1"
rand = "0.7.2"
net2 = "0.2.33"

[features]
redis = ["redis_crate"]
